--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -43,7 +43,7 @@
                         <li><a class="nav-link js-scroll-trigger" id="navbar-doc-report" href="/under-development/">DOCUMENTS & REPORTS</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-contact" href="/contact/">CONTACT</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a></li>
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-geonode" href="/geonode">GIS CATALOGUE</a></li>
+                        <li><a class="nav-link js-scroll-trigger" id="navbar-geonode" href="/layers">GIS CATALOGUE</a></li>
                         <div class="bims-nav-footer row">
                             <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY <a href="http://kartoza.com/">KARTOZA</a></div>
                         </div>
@@ -66,10 +66,9 @@
                     </div>
                      {% if user.is_authenticated %}
                         <li><a class="nav-link js-scroll-trigger" id="navbar-profile" href="/profile/">PROFILE</a></li>
-                         <li><a class="nav-link js-scroll-trigger" id="navbar-contributions" href="/under-development/">CONTRIBUTIONS</a></li>
                          <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/upload/">UPLOAD DATA</a></li>
                          {% if user.is_staff or user.is_superuser %}
-                            <li><a class="nav-link js-scroll-trigger" id="navbar-upload" href="/admin/">ADMINISTRATION</a></li>
+                            <li><a class="nav-link js-scroll-trigger" href="/admin/">ADMINISTRATION</a></li>
                          {% endif %}
                              <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a></li>
                      {% else %}
