--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -209,7 +209,55 @@
             </div>
             <div class="row content">
                 <ul id="locate-options" style="width:100%">
+                    <li class="locate-coordinates">
+                        Locate by coordinate
+                    </li>
+{#                    Will be implemented in another PR #}
+{#                    <li id="locate-farm">Locate by Farm/Farm Portion Code Page</li>#}
+{#                    <li id="map-navigation">Map navigation page</li>#}
                 </ul>
+            </div>
+        </div>
+    </script>
+
+    <script type="text/html" id="locate-coordinate-modal">
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Locate by Coordinate</h5>
+                        <button type="button" class="close"
+                                aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>
+                            Please enter the decimal latitude (positive
+                            degrees North) and longitude (positive degrees
+                            East) coordinates of your area of interest below!
+                        </p>
+                        <form class="form-inline">
+                            <label for="longitude" class="sr-only">
+                                Longitude
+                            </label>
+                            <input type="number" step="0.000001" min="-180"
+                                   max="180"
+                                   class="form-control mb-2 mr-sm-2"
+                                   id="longitude" placeholder="Longitude">
+                            <label for="latitude" class="sr-only">
+                                Latitude
+                            </label>
+                            <input type="number" step="0.000001" max="90"
+                                   min="-90"
+                                   class="form-control mb-2 mr-sm-2"
+                                   id="latitude" placeholder="Latitude">
+                            <button id="go-button" type="button" class="btn
+                            btn-outline-dark mb-2 mr-sm-2"
+                            >Go</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </script>
